# libtorch_tuts

dogscats/: CMakeLists.txt  data_prep.py  main.cpp
vgg16/: CMakeLists.txt  main.cpp
